fixed javascript file

--- a/saytwice.html
+++ b/saytwice.html
@@ -1,9 +1,9 @@
+<!DOCTYPE html>
 <html>
 <body>
 <script>
-(prompt) Give me a word to say twice
->hello
-hello hello
+var ask_question = prompt("Give me a word to say twice");
+console.log (ask_question + ask_question);
 </script>
 </body>
 </html>
