fine tuned Javascript file

--- a/saytwice.html
+++ b/saytwice.html
@@ -2,8 +2,8 @@
 <html>
 <body>
 <script>
-var ask_question = prompt("Give me a word to say twice");
-console.log (ask_question + ask_question);
+var ask_question = prompt("Give me a word to say twice.");
+console.log (ask_question + " " + ask_question + ".");
 </script>
 </body>
 </html>
